fixed extra whitespace in services and pricing

--- a/src/app/tabs-technician/profile-page-technician/profile-page-technician.page.scss
+++ b/src/app/tabs-technician/profile-page-technician/profile-page-technician.page.scss
@@ -30,3 +30,7 @@ span {
     margin-right: 4px;
     vertical-align: middle;
 }
+
+p {
+    white-space: pre-line;
+}
